# FlatMessage

./: .gitignore  Cargo.toml  README.md  book.toml
benchmarks/: Cargo.toml
benchmarks/benches/: b.rs  deserialization.rs  hashes.rs  serialization.rs
benchmarks/src/: get_size_min.rs  main.rs  structures.rs  tests.rs
benchmarks/src/structures/: enum_fields.rs  enum_lists.rs  large_vectors.rs  long_strings.rs  multiple_bools.rs  multiple_fields.rs  multiple_integers.rs  one_bool.rs  point.rs  process_create.rs  small_enum_lists.rs  string_lists.rs  vectors.rs
book/: SUMMARY.md
common/: Cargo.toml
common/src/: constants.rs  data_format.rs  hashes.rs  lib.rs  supported_types.rs
examples/: Cargo.toml
examples/serialize/: main.rs
flat_message/: Cargo.toml
flat_message/src/: buffer.rs  builder.rs  config.rs  error.rs  flat_message.rs  flat_message_buffer.rs  headers.rs  key.rs  lib.rs  metadata.rs  name.rs  serde.rs  size.rs  storage.rs  structure_information.rs
flat_message/src/serde/: basic_types.rs  bool.rs  buffers.rs  buffers_16bits.rs  buffers_8bits.rs  string.rs  string_lists.rs
flat_message_proc_macro/: Cargo.toml
flat_message_proc_macro/src/: attribute_parser.rs  config.rs  data_type.rs  enum_info.rs  enum_memory_representation.rs  field_info.rs  lib.rs  struct_info.rs  utils.rs  validate_checksum.rs  version_validator_parser.rs
keyvaluestruct/: Cargo.toml
keyvaluestruct-proc-macro/: Cargo.toml
keyvaluestruct-proc-macro/src/: lib.rs  struct_info.rs
keyvaluestruct/src/: crc32.rs  error.rs  key.rs  keyvaluestruct.rs  lib.rs  metadata.rs  supported_types.rs
keyvaluestruct/src/serde/: string.rs
t/: Cargo.toml
t/benches/: b.rs
