[package]
name = "flat_message"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flat_message_proc_macro = {path = "../flat_message_proc_macro"}
common = {path = "../common"}


[features]
default = []
VALIDATE_CRC32 = []

[lints]
workspace = true
