[package]
name = "flat_message_proc_macro"
version = "1.0.0"
edition = "2021"
authors = ["gavrilut.dragos@gmail.com"]
description = "..."
license = "MIT"
#repository = ""
#readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "*"
common = { path = "../common" }

[lints]
workspace = true
