[package]
name = "KeyValueStruct"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
KeyValueStructProcMacro = {path = "../keyvaluestruct-proc-macro"}



[features]
default = []
VALIDATE_CRC32 = []

[lints]
workspace = true
